--- a/.github/workflows/continuous_integration.yaml
+++ b/.github/workflows/continuous_integration.yaml
@@ -43,7 +43,8 @@ jobs:
       - name: Install dev dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools wheel
-          python3 -m pip install -r requirements_dev.txt
+          python3 -m pip install -r ${{ env.WORKING_DIRECTORY }}/requirements.txt
+          python3 -m pip install -r ${{ env.WORKING_DIRECTORY }}/requirements_dev.txt
       - name: Run Continuous Integration Action
         uses: ./.github/actions/continuous-integration
         with:
